--- a/pages/index.html
+++ b/pages/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nerdasso.com - Sua Loja Geek</title>
     <link rel="stylesheet" href="../styles/style.css" />
 </head>
+
 <body>
     <header>
         <a href="index.html" class="logo">
@@ -60,17 +62,21 @@
                 </select>
             </div>
         </section>
-        
+
         <section id="sobre" class="about-section">
             <h2>Sobre a Nerdasso.com</h2>
-            <p>Bem-vindo à Nerdasso.com, sua loja geek favorita! Fundada em 2020, nossa missão é oferecer os melhores produtos da cultura nerd para todos os fãs.</p>
-            <p>Nossa equipe é formada por apaixonados por filmes, séries, quadrinhos, games e tudo que envolve o universo geek. Selecionamos cuidadosamente cada produto para garantir qualidade e autenticidade.</p>
-            <p>Trabalhamos com as melhores marcas e fornecedores para trazer até você camisetas, livros, action figures, acessórios e muito mais com as suas sagas favoritas.</p>
+            <p>Bem-vindo à Nerdasso.com, sua loja geek favorita! Fundada em 2020, nossa missão é oferecer os melhores
+                produtos da cultura nerd para todos os fãs.</p>
+            <p>Nossa equipe é formada por apaixonados por filmes, séries, quadrinhos, games e tudo que envolve o
+                universo geek. Selecionamos cuidadosamente cada produto para garantir qualidade e autenticidade.</p>
+            <p>Trabalhamos com as melhores marcas e fornecedores para trazer até você camisetas, livros, action figures,
+                acessórios e muito mais com as suas sagas favoritas.</p>
         </section>
 
         <section class="products-grid">
             <article class="product-card">
-                <img src="../assets/img/products/spiderman.PNG" alt="Chaveiro Homem aranha sem volta pra casa" class="product-image" />
+                <img src="../assets/img/products/spiderman.PNG" alt="Chaveiro Homem aranha sem volta pra casa"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Chaveiro Homem aranha sem volta pra casa</h3>
                     <div class="product-price">R$ 49,90</div>
@@ -82,7 +88,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/obi-wan.PNG" alt="Caneca Star Wars Obi Wan Kenobi" class="product-image" />
+                <img src="../assets/img/products/obi-wan.PNG" alt="Caneca Star Wars Obi Wan Kenobi"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Caneca Star Wars Obi Wan Kenobi</h3>
                     <div class="product-price">R$ 75,00</div>
@@ -106,7 +113,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/batman.PNG" alt="Action Figure - Batman e a Motocicleta Bat-Pod" class="product-image" />
+                <img src="../assets/img/products/batman.PNG" alt="Action Figure - Batman e a Motocicleta Bat-Pod"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Action Figure - Batman e a Motocicleta Bat-Pod</h3>
                     <div class="product-price">R$ 518,73</div>
@@ -118,7 +126,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/darth-vader.PNG" alt="Balde de pipoca - Darth Vader" class="product-image" />
+                <img src="../assets/img/products/darth-vader.PNG" alt="Balde de pipoca - Darth Vader"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Balde de pipoca - Darth Vader</h3>
                     <div class="product-price">R$ 80,47</div>
@@ -142,7 +151,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/the-last-of-us.PNG" alt="Caneca The Last Of Us 2" class="product-image" />
+                <img src="../assets/img/products/the-last-of-us.PNG" alt="Caneca The Last Of Us 2"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Caneca The Last Of Us 2</h3>
                     <div class="product-price">R$ 40,37</div>
@@ -154,7 +164,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/thor-vs-loke.PNG" alt="Action Figure Thor E Loki Marvel" class="product-image" />
+                <img src="../assets/img/products/thor-vs-loke.PNG" alt="Action Figure Thor E Loki Marvel"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Action Figure Thor E Loki Marvel</h3>
                     <div class="product-price">R$ 150,00</div>
@@ -166,7 +177,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/mulher-maravilha.jpg" alt="Camiseta Mulher Maravilha" class="product-image" />
+                <img src="../assets/img/products/mulher-maravilha.jpg" alt="Camiseta Mulher Maravilha"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Camiseta Mulher Maravilha</h3>
                     <div class="product-price">R$ 49,90</div>
@@ -178,7 +190,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/lego-death-star.jpg" alt="LEGO Star Wars Death Star (4016 Peças)" class="product-image" />
+                <img src="../assets/img/products/lego-death-star.jpg" alt="LEGO Star Wars Death Star (4016 Peças)"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">LEGO Star Wars Death Star (4016 Peças)</h3>
                     <div class="product-price">R$ 2450,80</div>
@@ -190,7 +203,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/lego-millenium-falcon.webp" alt="Lego Millennium Falcon" class="product-image" />
+                <img src="../assets/img/products/lego-millenium-falcon.webp" alt="Lego Millennium Falcon"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Lego Millennium Falcon</h3>
                     <div class="product-price">R$ 1359,90</div>
@@ -202,7 +216,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/mochila-harry.jfif" alt="Mochila Hogwarts Harry Potter" class="product-image" />
+                <img src="../assets/img/products/mochila-harry.jfif" alt="Mochila Hogwarts Harry Potter"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Mochila Hogwarts Harry Potter</h3>
                     <div class="product-price">R$ 89,90</div>
@@ -214,7 +229,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/camiseta-homem-aranha.webp" alt="Camiseta Homem-Aranha" class="product-image" />
+                <img src="../assets/img/products/camiseta-homem-aranha.webp" alt="Camiseta Homem-Aranha"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Camiseta Homem-Aranha</h3>
                     <div class="product-price">R$ 49,90</div>
@@ -226,7 +242,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/livro-cronicas-de-narnia.webp" alt="Livro As Crônicas de Nárnia" class="product-image" />
+                <img src="../assets/img/products/livro-cronicas-de-narnia.webp" alt="Livro As Crônicas de Nárnia"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Livro As Crônicas de Nárnia</h3>
                     <div class="product-price">R$ 38,90</div>
@@ -238,7 +255,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/hq-super-man.jpg" alt="HQ Superman - Capa Dura" class="product-image" />
+                <img src="../assets/img/products/hq-super-man.jpg" alt="HQ Superman - Capa Dura"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">HQ Superman - Capa Dura</h3>
                     <div class="product-price">R$ 59,90</div>
@@ -250,7 +268,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/hq-batman-universo.jpg" alt="HQ Batman Universo" class="product-image" />
+                <img src="../assets/img/products/hq-batman-universo.jpg" alt="HQ Batman Universo"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">HQ Batman Universo</h3>
                     <div class="product-price">R$ 39,90</div>
@@ -262,7 +281,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/livro-mochileiro-das-galaxias.webp" alt="Livro O Guia Definitivo do Mochileiro das Galáxias" class="product-image" />
+                <img src="../assets/img/products/livro-mochileiro-das-galaxias.webp"
+                    alt="Livro O Guia Definitivo do Mochileiro das Galáxias" class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Livro O Guia Definitivo do Mochileiro das Galáxias</h3>
                     <div class="product-price">R$ 49,90</div>
@@ -274,7 +294,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/livro-harry-potter.jpg" alt="Livro Harry Potter e a Pedra Filosofal" class="product-image" />
+                <img src="../assets/img/products/livro-harry-potter.jpg" alt="Livro Harry Potter e a Pedra Filosofal"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Livro Harry Potter e a Pedra Filosofal</h3>
                     <div class="product-price">R$ 44,90</div>
@@ -286,7 +307,8 @@
             </article>
 
             <article class="product-card">
-                <img src="../assets/img/products/action-figure-luke-skywalker.jpg" alt="Action Figure Luke Skywalker" class="product-image" />
+                <img src="../assets/img/products/action-figure-luke-skywalker.jpg" alt="Action Figure Luke Skywalker"
+                    class="product-image" />
                 <div class="product-info">
                     <h3 class="product-title">Action Figure Luke Skywalker</h3>
                     <div class="product-price">R$ 89,90</div>
@@ -346,4 +368,5 @@
         </div>
     </footer>
 </body>
+
 </html>
