--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -67,7 +67,7 @@
                         <img src="../assets/img/perfil/anakin.png" alt="Rafael Oliveira - CEO & Fundador, viciado em Star Wars" />
                         <h4>Rafael Sebastião</h4>
                         <p class="role">CEO & Fundador</p>
-                        <p>Viciado em Star Wars e colecionador de legos action figures</p>
+                        <p>Viciado em Star Wars e colecionador de legos e action figures</p>
                     </article>
                     <article class="team-member">
                         <img src="../assets/img/perfil/hermione.jpg" alt="Ana Santos - Diretora de Produtos, especialista em cultura pop" />
